--- a/scss/_default.scss
+++ b/scss/_default.scss
@@ -1,3 +1,10 @@
 @import 'bourbon/bourbon';
 @import 'neat/neat';
 @import url('https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css');
+
+.chat-app {
+  @include display(flex);
+  @include flex-direction(row);
+  @include align-items(center);
+  @include justify-content(center);
+}
