--- a/scss/user.scss
+++ b/scss/user.scss
@@ -1,4 +1,4 @@
-@import 'colors';
+/**@import 'colors';
 
 .user-list ul{
   list-style: none;
@@ -9,3 +9,31 @@
 .person {
   padding: 32px 64px;
 }
+**/
+//div.user-list
+//  ul
+//    li
+//      p
+
+
+.user-list {
+  position: fixed;
+
+  width: 500px;
+  height: 100vh
+
+  top: 0;
+  bottom: 0;
+}
+
+.user-list ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+//button.user-list-button
