--- a/scss/notifcation.scss
+++ b/scss/notifcation.scss
@@ -21,7 +21,9 @@
   display: flex;
   flex-direction: column-reverse;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: flex-start;
+
+  height: 100vh;
 }
 
 .notifications li {
@@ -30,6 +32,7 @@
 
 .notifications li .notifications {
   padding: 10px 25px;
+  border-radius: 5px;
 }
 
 .notifications li .notifications.connect {
@@ -40,5 +43,5 @@
   background: grey;
 }
 .notifications li .notifications.info {
-  background: light-blue;
+  background: blue;
 }
