Login page update

--- a/templates/message.html
+++ b/templates/message.html
@@ -1,1 +1,1 @@
-<div>[<%= timestamp %>🥊] <%= username %> : <%= message %></div>
+<div class="message">[<%= timestamp %>] <%= username %> : <%= message %></div>
