--- a/scss/login-screen.scss
+++ b/scss/login-screen.scss
@@ -6,10 +6,24 @@
   top: 0;
   left: 0;
 
+  text-align: center;
+
   height: 100vh;
   width: 100vw;
 
   z-index: 100;
 
-  background: green;
+  background-color: #73DCB2;
+}
+
+.login-form {
+  margin-top: 15em;
+}
+
+.login-button {
+  margin-top: 1em;
+  padding: 0.5em 1em;
+  background-color: white;
+  border: solid 2px #626262;
+  border-radius: 10%;
 }
