--- a/public/views/404.html
+++ b/public/views/404.html
@@ -4,8 +4,12 @@
     <meta charset="utf-8">
     <title>Simple Chat | Oops</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/css/404.css" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto+Slab:300,400,700" rel="stylesheet">
       </head>
   <body>
-    <h1>404</h1>
+    <h1><img src="/images/lost.png"></img></h1>
+
+    <a class="button" href="index.html">Back To Login</a>
   </body>
 </html>
