--- a/public/views/404.html
+++ b/public/views/404.html
@@ -10,6 +10,6 @@
   <body>
     <h1><img src="/images/lost.png"></img></h1>
 
-    <a class="button" href="index.html">Back To Login</a>
+    <a class="button" href="/">Back To Login</a>
   </body>
 </html>
