--- a/scss/login-screen.scss
+++ b/scss/login-screen.scss
@@ -20,6 +20,16 @@
   margin-top: 40%;
 }
 
+.container input{
+  background-color: white;
+  border: solid 2px #626262;
+  border-radius: 10%;
+}
+
+.container label{
+  color: white;
+}
+
 .login-button {
   margin-top: 1em;
   padding: 0.5em 1em;
