Added the Logo on the login screen

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -32,6 +32,9 @@
       }
     </style>
   </head>
+  <header>
+    <img src="images/dat-chat-logo.png"></img>
+  </header>
   <body>
     <div id="app"></div>
   </body>
