--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,13 @@
+<head>
+  <meta charset="utf-8">
+  <title>Simple Chat</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="/css/login-screen.css" />
+</head>
+<header>
+
+<img class="logo" src="/images/dat-chat-logo.png"></img>
+
 <div class="right">
   <div class="container">
     <input id="username" autocomplete="off" required />
