--- a/scss/message.scss
+++ b/scss/message.scss
@@ -2,4 +2,29 @@
   background-color: white;
   border: solid 2px #626262;
   padding: 0.5em;
+  width: 75%;
+  height: 50px;
+  margin-bottom: -21px;
+}
+
+#message-bay {
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  height: 50px;
+  margin: 1em;
+}
+
+.messages {
+width: 100%;
+display: block;
+margin-bottom: 75px;
+}
+
+.message-button {
+  width: 25%;
+  height: 50px;
+  margin-top: -12px;
+  background-color: #73dcb2;
+  border: none;
 }
